fix: remove unnecessary overflow property

--- a/styles/base.css
+++ b/styles/base.css
@@ -170,7 +170,6 @@ picture {
 
 pre,
 code {
-  overflow: auto;
   font: var(--font-code);
   font-variation-settings:
     'wght' 560,
